...
                borderRadius: BorderRadius.circular(8),
                borderSide: BorderSide(
                  width: 1.5,
                  color: colorPalette.primary ?? const Color(0xFF6852D6),
                ),
              ),
              hintText: "Enter the UID",
              hintStyle: TextStyle(
                color: colorPalette.textTertiary ?? const Color(0xFFA1A1A1),
                fontSize: 14,
                fontFamily: 'Roboto',
                fontWeight: FontWeight.w400,
                height: 1.20,
...
        onPressed: _isLoading
            ? null
            : () {
                removeFocus(context, _focusNode);
                if (_selectedUserNotifier.value == null &&
                    _uidController.text.isEmpty) {
                  showErrorSnackBar(context, "Please enter a valid UID",
                      typography, colorPalette);
                  return;
                }
                if (_selectedUserNotifier.value != null &&
                    _selectedUserNotifier.value!.userId.isNotEmpty) {
                  _loginUser(_selectedUserNotifier.value!.userId);
...
                  strokeWidth: 2,
                  valueColor: AlwaysStoppedAnimation<Color>(
                      colorPalette.white ?? Colors.white),
                ),
              )
            : Text(
                "Continue",
                style: TextStyle(
                  color: colorPalette.buttonIconColor,
                  fontSize: typography.button?.medium?.fontSize,
                  fontFamily: typography.button?.medium?.fontFamily,
                  fontWeight: typography.button?.medium?.fontWeight,
                ),
...
