...
"error":"Error",
"no_groups_found":"No groups found",
"no_chats_found":"No chats found",
"media_message":"Media message",
"incoming_audio_call":"Incoming audio call",
"incoming_video_call":"Incoming video call",
"decline":"Decline",
"accept":"Accept",
"call_initiated":"Call initiated",
"outgoing_audio_call":"Outgoing audio call",
"outgoing_video_call":"Outgoing video call",
"call_rejected":"Call rejected",
"rejected_call":"rejected call",
...
"delete_message":"Delete message",
"edit_message":"Edit message",
"owner":"Owner",
"change_scope":"Change Scope",
"sticker":"Sticker",
"last_active_at":"Last Active At",
"voice_call":"Voice call",
"view_detail":"View Detail",
"votes":"votes",
"vote":"vote",
"no_vote":"No vote",
"reacted":"reacted",
"added":"added",
...
