...
                  Icons.logout,
                  color: _colorPalette.error,
                  size: 22,
                ),
              ),
              Text(
                'Logout',
                style: TextStyle(
                  fontSize: 14,
                  fontWeight: FontWeight.w400,
                  color: _colorPalette.error,
                ),
              ),
...
