...
  TranslationsEn([super.locale = 'en']);

  @override
  String get users => 'Users';

  @override
  String get chats => 'Chats';

  @override
  String get groups => 'Groups';

  @override
  String get more => 'More';
...

  @override
  String get confirmDeleteAndExit =>
      'Are you sure you want to delete this chat and exit the group? This action cannot be undone.';

  @override
  String get continueText => 'Continue';

  @override
  String get confirmTransferOwnership =>
      'Are you sure you want to transfer ownership? This can\'t be undone, and the new owner will take full control.';

  @override
...
